# scrollshot2pdf

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  image_to_pdf.py  justfile  pyproject.toml  scrollshot2pdf.py
docs/: column-calculation.md  image-layout.md
tests/: conftest.py  test_image_processing.py  test_slices.py  test_utils.py
